--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,7 @@
 // ✅ 各種 Gradle プラグインのバージョン定義（適用は false にしてモジュール側で apply）
+// ⚠️ com.android.application / org.jetbrains.kotlin.android は settings.gradle 側で管理しているため、ここでは宣言しない（衝突回避）
 plugins {
-    id("com.android.application") version "8.3.0" apply false     // アプリ用の Android プラグイン
-    id("org.jetbrains.kotlin.android") version "1.9.22" apply false  // Kotlin Android プラグイン
-    id("com.google.devtools.ksp") version "1.9.22-1.0.18" apply false // KSP（Roomなどのコード生成）
+    id("com.google.devtools.ksp") version "2.1.0-1.0.29" apply false // KSP（Roomなどのコード生成）
     id("com.google.dagger.hilt.android") version "2.51.1" apply false // Hilt（依存注入）
 }
 
