--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -13,27 +13,28 @@ pluginManagement {
 
     // 🔽 プラグイン管理用リポジトリを指定
     repositories {
-        google()                                    // Googleの標準リポジトリ
-        mavenCentral()                              // Maven Central
-        gradlePluginPortal()                        // Gradleプラグイン用
-        maven { url "https://storage.googleapis.com/download.flutter.io" }  // Flutter専用のライブラリ
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url "https://storage.googleapis.com/download.flutter.io" }
     }
 }
 
 // ✅ plugins セクション：プロジェクト全体で使用する Gradle プラグインの定義
 plugins {
-    // 🔽 アプリケーション開発用 Android プラグイン
-    id "com.android.application" version "8.3.0" apply false
+    // 🔽 Android Gradle Plugin（Flutter の警告条件を満たす）
+    id "com.android.application" version "8.6.0" apply false
+    id "com.android.library" version "8.6.0" apply false
 
-    // 🔽 ライブラリ用 Android プラグイン（使用しない場合も定義されていることがある）
-    id "com.android.library" version "8.3.0" apply false
+    // 🔽 Kotlin（Flutter の警告条件を満たす）
+    id "org.jetbrains.kotlin.android" version "2.1.0" apply false
 
-    // 🔽 Kotlin プラグイン（ComposeやAndroid連携用）
-    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
+    // ✅ Kotlin 2.0+ で Compose を使う場合に必須
+    id "org.jetbrains.kotlin.plugin.compose" version "2.1.0" apply false
 
     // 🔽 Flutter 固有の Gradle プラグイン（必須）
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
 }
 
-// ✅ モジュール定義：このプロジェクトには "app" モジュールが含まれている
+// ✅ モジュール定義
 include ":app"
